--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "authors": "Sergio Castillo",
   "private": false,
-  "dependencies": {},
+  "dependencies": {
+    "angular": "~1.4.1",
+    "ui-router": "~0.2.15"
+  },
   "devDependencies": {}
 }
