--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "StarterAngularProject",
+  "name": "Pulguitaz",
   "version": "0.0.0",
   "description": "All what you need for starting a new angular project",
-  "main": "public/js/app.js",
+  "main": "server.js",
   "devDependencies": {
     "body-parser": "^1.5.2",
     "bower": "^1.3.1",
@@ -48,20 +48,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/scyrizales/starterAngularProject.git"
+    "url": "https://github.com/scyrizales/pulguitaz.git"
   },
   "keywords": [
-    "Starter",
+    "Pulguitaz",
     "Angular",
     "Project"
   ],
   "author": "Sergio Castillo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/scyrizales/starterAngularProject/issues"
+    "url": "https://github.com/scyrizales/pulguitaz/issues"
   },
-  "homepage": "https://github.com/scyrizales/starterAngularProject",
+  "homepage": "https://github.com/scyrizales/pulguitaz",
   "dependencies": {
-    "gulp-filter": "^2.0.2"
+    "body-parser": "^1.5.2",
+    "express": "^4.7.2",
+    "gulp-filter": "^2.0.2",
+    "mongoose": "^4.0.6",
+    "morgan": "^1.6.0",
+    "optimist": "^0.6.1"
   }
 }
